--- a/style.css
+++ b/style.css
@@ -81,12 +81,16 @@ button:active {
     background-color: #f17377;
 }
 
+.ans-sign {
+	
+}
+
 .equal-sign {
     background-color: #2e86c0;
     border-color: #337cac;
     color: #fff;
     height: 100%;
-    grid-area: 2 / 4 / 5 / 4;
+    /*grid-area: 5 / 3 / 5 / 5;*/
 }
 
 .equal-sign:hover {
