--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
-    font-size: 62.5%;
+    /*font-size: 62.5%;*/
+    font-size: 80%;
     box-sizing: border-box;
 }
 
@@ -19,42 +20,44 @@ html {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
+    box-shadow: 8px 12px #0005;
 }
 
 .calculator-screen {
-	/*text-shadow: 0 0 42px #FFFFFF;*/
+	font-size: 4rem;
     width: 100%;
-    font-size: 5rem;
     height: 80px;
     border: none;
     background-color: #252525;
     color: #fff;
     text-align: right;
-    /*direction:RTL;*/
     padding-right: 20px;
     padding-left: 10px;
 }
 
 button {
+	outline: 0;
     cursor: pointer;
     height: 60px;
     background-color: #fff;
     border-radius: 3px;
     border: 1px solid #c4c4c4;
-    background-color: transparent;
+    /*background-color: transparent;*/
     font-size: 2rem;
     color: #333;
-    background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0, 0, 0, .08));
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255, 255, 255, .45), inset 0 -1px 0 0 rgba(255, 255, 255, .15), 0 1px 0 0 rgba(255, 255, 255, .15);
+    box-shadow: 3px 3px #0005;
+    transition-duration: .1s;
     text-shadow: 0 1px rgba(255, 255, 255, .4);
 }
 
 button:hover {
-    /*background-color: #eaeaea;*/
+    background-color: #eaeaea;
 }
 
 button:active {
-	background-image: linear-gradient(to top, transparent, transparent 50%, rgba(0, 0, 0, .08));
+	transition-duration: 0s;
+	box-shadow: none;
+	/*background-image: linear-gradient(to top, transparent, transparent 50%, rgba(0, 0, 0, .08));*/
 }
 
 .operator {
@@ -79,7 +82,7 @@ button:active {
     color: #fff;
 }
 
-.delete-clear:hover {
+.delete-sign:hover {
     background-color: #f17377;
 }
 
