--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ html {
     box-sizing: border-box;
 }
 
+* {
+	font-family: Consolas, monospace;
+}
+
 *,
 *::before,
 *::after {
@@ -15,11 +19,8 @@ html {
 .calculator {
     border: 1px solid #ccc;
     border-radius: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
+    margin: auto;
+    width: 460px;
     box-shadow: 8px 12px #0005;
 }
 
@@ -28,7 +29,8 @@ html {
     width: 100%;
     height: 80px;
     border: none;
-    background-color: #252525;
+    border-radius: 5px 5px 0 0;
+    background-color: #333;
     color: #fff;
     text-align: right;
     padding-right: 20px;
@@ -65,6 +67,15 @@ button:active {
 	font-weight: bold;
     color: #337cac;
 }
+.function {
+	/*font-size: 27px;*/
+	font-style: italic;
+    color: #339cac;
+}
+.constant {
+	font-style: italic;
+    color: #999c2c;
+}
 
 .all-clear {
     background-color: #f0595f;
@@ -95,7 +106,7 @@ button:active {
     border-color: #337cac;
     color: #fff;
     height: 100%;
-    grid-area: 4 / 4 / 6 / 4;
+    /*grid-area: 4 / 4 / 6 / 4;*/
 }
 
 .equal-sign:hover {
@@ -104,8 +115,13 @@ button:active {
 
 .calculator-keys {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    padding: 20px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 10px;
+    padding: 15px;
     /*background: #eee;*/
+}
+
+.hiddenSmall {
+	font-size: 10px;
+	text-decoration: line-through;
 }
